# orchestra

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  MARKET_ANALYSIS.md  README.md  answer.txt  docker-compose.yml  megalomaniacs_careers.html  megalomaniacs_command_center.html  megalomaniacs_victory_speech.html  poem.txt  pyproject.toml  swot_world_domination.md
ai-telegram-bot/alembic/: env.py
ai-telegram-bot/bot/: config.py
bot/keyboards/: __init__.py  callbacks.py  main_menu.py  payments.py  services.py  subscription.py
bot/middlewares/: __init__.py  db_session.py  throttle.py  user_check.py
bot/services/: subscription_service.py
bot/states/: __init__.py  ai_states.py
bot/utils/: rate_limiter.py
cashbot/: requirements.txt  setup.py
cashbot-landing/: animations.md  content.md
cashbot/cashbot/: __init__.py  pricing.py  proposal.py
config/: agents.default.yaml  agents.yaml
config/saved/: 1.yaml  default.yaml
gigs/: fiverr_gig.md  kwork_gig.md  monetize_today.md  upwork_profile.md
hello-world-alpha/: index.html  style.css
hello-world-gamma/: index.html  script.js  style.css
landing/: index.html
public/: index.html
src/: main.py
src/agents/: client.py  definition.py
src/cli/: app.py
src/modes/: base.py  consensus.py  discussion.py  parallel.py  pipeline.py
src/orchestrator/: coordinator.py  (+5 more)
tests/: conftest.py  test_client.py  test_definition.py  test_history.py  test_jobs.py  test_modes.py  test_sessions.py  test_transcript.py
textcraft-ai/: .env.example  .gitignore  package.json  tailwind.config.ts
(+19 files in other folders)
